[package]
name = "modality-robot-framework"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "modality_client"
crate-type = ["cdylib"]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "net", "signal", "tracing"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
auxon-sdk = { version = "1.3", features = ["modality"] }
pyo3 = { version = "0.21", features = ["extension-module"] }
